--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/chopraapooja/react-express-skeleton/issues"
   },
-  "homepage": "https://github.com/chopraapooja/react-express-skeleton#readme"
+  "homepage": "https://github.com/chopraapooja/react-express-skeleton#readme",
+  "dependencies": {},
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-preset-latest": "^6.24.1",
+    "babel-preset-react": "^6.24.1"
+  }
 }
