--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "compile": "webpack"
+    "compile": "webpack",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -18,7 +19,10 @@
     "url": "https://github.com/chopraapooja/react-express-skeleton/issues"
   },
   "homepage": "https://github.com/chopraapooja/react-express-skeleton#readme",
-  "dependencies": {},
+  "dependencies": {
+    "express": "^4.15.4",
+    "webpack-dev-middleware": "^1.12.0"
+  },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
