--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "homepage": "https://github.com/chopraapooja/react-express-skeleton#readme",
   "dependencies": {
     "express": "^4.15.4",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
     "webpack-dev-middleware": "^1.12.0"
   },
   "devDependencies": {
